# finatr

./: .babelrc  .gitignore  .parcelrc  .prettierrc  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  babel.config.js  cypress.json  jest.config.js  jest.resolver.js  netlify.toml  package-lock.json  package.json  playwright-ct.config.ts  playwright.config.ts  readme.md  renovate.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json
.changes/: autoprefixer-10.3.7.md  bigjs-v6.md  change-pr-652.md  change-pr-660.md  change-pr-669.md  change-pr-670.md  change-pr-673.md  change-pr-674.md  change-pr-691.md  change-pr-727.md  change-pr-733.md  change-pr-734.md  change-pr-737.md  change-pr-741.md  change-pr-755.md  change-pr-762.md  change-pr-763.md  change-pr-764.md  change-pr-766.md  change-pr-769.md  change-pr-770.md  change-pr-774.md  change-pr-800.md  chartRange-reconstitution.md  config.json  d3-array-3.1.1.md  d3-scale-4.0.2.md  d3-v7.md  extraneous-footer-items.md  flex-table-to-react-aria-table.md  headlessui-react-1.4.2.md  implement-covector.md  initial-icicle-chart.md  lazy-load-code-split.md  license-apache2.md  mobile-nav-clickability.md  nav-mobile-popover.md  parcel-v2.0.0.md  parcel-v2.0.1.md  persist-state-with-reconstitution.md  (+17 more)
.github/: renovate.json
patches/: starfx+0.13.0.patch
public/: index.html
src/: TODO.md  accountInput.js  accountTransactionInput.js  app.js  app.tsx  barChart.js  dineroUtils.ts  error.js  financial.js  importing.js  index.html  index.js  index.tsx  tabView.js  (+8 more)
src-tauri/: CHANGELOG.md  Cargo.toml  readme.md  tauri.conf.json
src-tauri/src/: main.rs
(+291 files in other folders)
